--- a/frontend/src/app/components/buscador/buscador.component.css
+++ b/frontend/src/app/components/buscador/buscador.component.css
@@ -1,35 +1,41 @@
 .searchBar {
     display: flex;
-    align-items: center;
-    margin: 1rem;
+    margin: 3rem;
     justify-content: center;
-    height: 30%;
+    /* height: 25%; */
+    /* padding-top: 50px; */
 }
 
 input {
-    border: 3px solid #94d3ac;
+    border: 4px solid #94d3ac;
+    border-style: solid;
+    border-color: #94d3ac;
     font-size: 18px;
-    border-radius: 5px 0 0 5px;
+    border-radius: 3px 3px 3px 3px;
     text-indent: 15px;
-    height: 2.5rem;
+    height: 2.4rem;
     background-color: white;
-}
-
-::placeholder {
-    font-size: 17px;
+    width: 23.3rem;
 }
 
 fa-icon {
-    margin: 5px;
-    font-size: 2.15rem;
+    font-size: 2.2rem;
     color: white;
 }
 
 .searchButton {
-    border: 3px solid;
+    border: 2px;
     border-color: #94d3ac;
     background: #94d3ac;
     border-style: solid;
-    border-radius: 0 5px 5px 0;
+    /* border-radius: 0 3px 3px 0; */
     cursor: pointer;
+    height: 44px;
+    position: absolute;
+    margin-left: 20rem;
+}
+
+.numeroConceptosAutocomplete {
+    margin-top: 15px;
+    margin-left: 10px;
 }
