--- a/frontend/src/app/components/cohortes/cohortes.component.html
+++ b/frontend/src/app/components/cohortes/cohortes.component.html
@@ -23,8 +23,9 @@
                 Nombre: {{ cohorte.nombre_cohorte }}
             </p>
 
-            <fa-icon class="iconModify" [icon]="faPen"></fa-icon>
-            <fa-icon class="iconRemove" [icon]="faTrash" (click)="removeCohorte(cohorte.id_cohorte)"></fa-icon>
+            <fa-icon class="iconModify" [icon]="faPen" title="Modificar esta cohorte"></fa-icon>
+            <fa-icon class="iconRemove" [icon]="faTrash" title="Eliminar esta cohorte"
+                (click)="removeCohorte(cohorte.id_cohorte)"></fa-icon>
         </div>
 
         <hr>
