--- a/frontend/src/app/components/resultados/resultados.component.html
+++ b/frontend/src/app/components/resultados/resultados.component.html
@@ -8,9 +8,9 @@
         <button mat-raised-button class="botonVerCohortes" [routerLink]="['/cohortes']" (click)="showCohorte()">
             Ver cohortes</button>
 
-        <button mat-raised-button class="botonNuevaCohorte" [routerLink]="['/cohortes/new']" (click)="showCohorte()"
+        <button mat-raised-button class="botonNuevaCohorte" [routerLink]="['/cohortes/agregar']" (click)="showCohorte()"
             [ngStyle]="cohorteService.cohorteActual.length === 0 ? {'background-color':'rgb(112, 112, 112)'} : {'background-color': 'rgb(50, 165, 66)'}">
-            Nueva cohorte ({{ cohorteService.cohorteActual.length }})</button>
+            Agregar cohorte ({{ cohorteService.cohorteActual.length }})</button>
 
         <button mat-raised-button class=" botonEliminarCohorte" (click)="cohorteService.removeAllFromCohorte()">
             <fa-icon [icon]="faTrash" (click)="cohorteService.removeAllFromCohorte()"></fa-icon>
@@ -65,7 +65,7 @@
                     <a class="links"
                         [routerLink]="['/results/', termino.termino_preferido]">{{ termino.termino_preferido }}
                     </a>
-                    <p>ID: {{ termino.concept_id_HIBA }}</p>
+                    <small><br>ID: {{ termino.concept_id_HIBA }}</small>
                 </mat-checkbox>
             </li>
         </ul>
