--- a/frontend/src/app/components/resultados/resultados.component.html
+++ b/frontend/src/app/components/resultados/resultados.component.html
@@ -8,7 +8,7 @@
         <button mat-raised-button class="botonVerCohortes" [routerLink]="['/cohortes']" (click)="showCohorte()">
             Ver cohortes</button>
 
-        <button mat-raised-button class="botonNuevaCohorte" [routerLink]="['/cohortes/agregar']" (click)="showCohorte()"
+        <button mat-raised-button class="botonNuevaCohorte" (click)="openDialog()"
             [ngStyle]="cohorteService.cohorteActual.length === 0 ? {'background-color':'rgb(112, 112, 112)'} : {'background-color': 'rgb(50, 165, 66)'}">
             Agregar cohorte ({{ cohorteService.cohorteActual.length }})</button>
 
