--- a/frontend/src/app/components/buscador/buscador.component.css
+++ b/frontend/src/app/components/buscador/buscador.component.css
@@ -2,40 +2,62 @@
     display: flex;
     margin: 3rem;
     justify-content: center;
-    /* height: 25%; */
-    /* padding-top: 50px; */
 }
 
-input {
-    border: 4px solid #94d3ac;
+.searchButton {
+    position: absolute;
+    top:0;
+    right:0;
     border-style: solid;
     border-color: #94d3ac;
-    font-size: 18px;
-    border-radius: 3px 3px 3px 3px;
-    text-indent: 15px;
-    height: 2.4rem;
-    background-color: white;
-    width: 23.3rem;
+    border-radius: 20px 10px 10px 20px;
+    background-color: #94d3ac;
+    height: 43px;
+    cursor: pointer;
 }
 
 fa-icon {
     font-size: 2.2rem;
+    height: 50px;
     color: white;
 }
 
-.searchButton {
-    border: 2px;
-    border-color: #94d3ac;
-    background: #94d3ac;
+input {
+    width: 25em;
+    border: 3px;
     border-style: solid;
-    /* border-radius: 0 3px 3px 0; */
-    cursor: pointer;
-    height: 44px;
-    position: absolute;
-    margin-left: 20rem;
+    border-color: #94d3ac;
+    font-size: 18px;
+    outline: none;
+    text-indent: 15px;
+    height: 2.4rem;
+    border-radius: 20px 10px 10px 20px;
+    background-color: white;
+}
+
+form {
+    display: inline-flex;
+    position: relative;
+}
+
+mat-option {
+    color: rgb(119, 119, 119);
+}
+
+mat-option:hover {
+    color: black;
 }
 
 .numeroConceptosAutocomplete {
     margin-top: 15px;
     margin-left: 10px;
+    color: rgb(0, 119, 0);
 }
+
+::ng-deep .mat-autocomplete {
+    margin-top: 1px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px 20px 20px 20px;
+    border-bottom-right-radius: 20px;
+}
+
