--- a/frontend/src/app/components/cohortes/cohortes.component.css
+++ b/frontend/src/app/components/cohortes/cohortes.component.css
@@ -30,6 +30,7 @@ ul {
 .container {
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
 
 .containerCohorte {
@@ -70,7 +71,8 @@ hr {
 .bodyCohorte {
     max-height: 250px;
     overflow-y: scroll;
-    scroll-padding-bottom: 2rem;
+    position: relative;
+    align-items: flex-start;
 }
 
 .iconModify {
@@ -99,6 +101,7 @@ hr {
 
 .links {
     text-decoration: none;
+    color: #003cbd;
 }
 
 .a:visited {
