--- a/frontend/src/app/components/resultados/resultados.component.css
+++ b/frontend/src/app/components/resultados/resultados.component.css
@@ -112,6 +112,10 @@ ul {
     list-style-type: none;
 }
 
+.mat-menu-color {
+    background-color: rgb(50, 165, 66);
+}
+
 ::ng-deep .mat-progress-bar-fill::after {
     background-color: rgb(103, 190, 107);
 }
