--- a/frontend/src/app/components/resultados/resultados-dialog-agregar-cohorte.css
+++ b/frontend/src/app/components/resultados/resultados-dialog-agregar-cohorte.css
@@ -1,15 +1,3 @@
-.botonNuevaCohorte {
-    margin: 10px;
-    background-color:rgb(152, 115, 185);
-    color:white;
-}
-
-.botonCohorteExistente {
-    margin: 10px;
-    background-color:rgba(152, 115, 185, 0.13);
-    color:rgb(152, 115, 185);
-}
-
-::ng-deep .mat-button-focus-overlay {
-    display: none;
+.modal {
+    color: black;
 }
