--- a/frontend/src/app/components/resultados/resultados-dialog-agregar-cohorte.css
+++ b/frontend/src/app/components/resultados/resultados-dialog-agregar-cohorte.css
@@ -1,3 +1,21 @@
-.modal {
-    color: black;
+.botonAgregarCohorte {
+    margin-top: 15px;
+    margin-left: 30%;
+    background-color: rgb(152, 115, 185);
+    color: white;
+    font-weight: bold;
+    /* background-color: white;
+    color: black; */
 }
+
+/* .mat-expansion-panel-header {
+    background-color: rgb(201, 123, 123);
+} */
+
+.mat-expansion-panel.mat-expanded {
+    background-color: rgba(146, 146, 146, 0.062);
+}
+
+/* .mat-expansion-panel-.mat-expanded {
+    background-color: rgb(221, 221, 221);
+} */
