--- a/frontend/src/app/components/resultados/resultados-dialog-agregar-cohorte.html
+++ b/frontend/src/app/components/resultados/resultados-dialog-agregar-cohorte.html
@@ -11,12 +11,13 @@
         <div class="container" *ngIf="cohorteService.isDataLoaded; else loading">
 
             <mat-accordion>
-                <div class="cohorte" *ngFor="let cohorte of cohorteService.cohorteGet.data.query_cohortes">
+                <div class="cohorte" *ngFor="let cohorte of cohorteService.cohorteGet.data.cohortes">
 
                     <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                                {{cohorte.nombre_cohorte}} ({{ cohorteService.getNumeroConceptos(cohorte.id_cohorte) }})
+                                {{cohorte.cohorte.nombre_cohorte}}
+                                ({{cohorteService.getNumeroConceptos(cohorte.cohorte.id_cohorte)}})
                             </mat-panel-title>
                             <mat-panel-description>
 
@@ -24,7 +25,7 @@
                         </mat-expansion-panel-header>
                         <div class="botonesCohorte">
                             <button class="botonAgregarCohorte" mat-raised-button [mat-dialog-close]
-                                (click)="cohorteService.updateCohorte(cohorte.id_cohorte, cohorteService.cohorteActual)">
+                                (click)="cohorteService.updateCohorte(cohorte.cohorte.id_cohorte, cohorteService.cohorteActual)">
                                 Agregar a esta cohorte
                             </button>
                         </div>
