--- a/frontend/src/app/components/resultados/resultados.component.html
+++ b/frontend/src/app/components/resultados/resultados.component.html
@@ -28,7 +28,7 @@
     <div class="padres">
         <ul>
             <div class="titleRow">
-                <h2>
+                <h2 class="padresTitle">
                     Padres ({{ cohorteService.resultados.data.query_padres_termino_preferido.length }})
                 </h2>
                 <div class="titleRowCohorteOpciones">
@@ -59,7 +59,7 @@
 
     <div class="termino">
         <ul>
-            <h2>
+            <h2 class="terminoTitle">
                 Término
             </h2>
 
@@ -79,7 +79,7 @@
     <div class="hijos">
         <ul>
             <div class="titleRow">
-                <h2>
+                <h2 class="hijosTitle">
                     Hijos ({{ cohorteService.resultados.data.query_hijos_termino_preferido.length }})
                 </h2>
 
