--- a/frontend/src/app/components/cohortes/cohortes.component.css
+++ b/frontend/src/app/components/cohortes/cohortes.component.css
@@ -18,7 +18,11 @@ input {
 }
 
 input:focus {
-    border-color: rgba(0, 0, 0, 0.39);
+    border-color: rgba(0, 0, 0, 0.452);
+}
+
+input:hover {
+    border-color: rgba(0, 0, 0, 0.452);
 }
 
 /* input::placeholder {
@@ -65,9 +69,15 @@ ul {
     margin: 1rem;
     margin-left: 33%;
     width: 36%;
-    border: 1px solid #35a560c7;
+    /* border: 1px solid #35a560c7; */
+    border: 1px solid #00000044;
     border-radius: 7px;
-    box-shadow: 6px 6px 6px -5px rgba(92, 92, 92, 0.75);    
+    box-shadow: 6px 6px 6px -5px rgba(92, 92, 92, 0.75);   
+    background-color: rgba(255, 255, 255, 0.644);
+}
+
+.containerCohorte:hover {
+    border: 1px solid #35a560c7;
 }
 
 .cohorteID {
