--- a/frontend/src/app/components/nuevacohorte/nuevacohorte.component.css
+++ b/frontend/src/app/components/nuevacohorte/nuevacohorte.component.css
@@ -30,10 +30,14 @@
     margin-left: 33%;
     margin-top: 15px;
     width: 36%;
-    border: 1px solid #35a560c7;
+    border: 1px solid #00000044;
     border-radius: 7px;
     box-shadow: 6px 6px 6px -5px rgba(92, 92, 92, 0.75);
+    background-color: rgba(255, 255, 255, 0.644);
+}
 
+.container:hover {
+    border: 1px solid #00000079;
 }
 
 /* Header nueva cohorte*/
