--- a/frontend/src/app/components/buscador/buscador.component.css
+++ b/frontend/src/app/components/buscador/buscador.component.css
@@ -28,6 +28,7 @@ input {
     border-style: solid;
     border-color: #94d3ac;
     font-size: 18px;
+    font-weight: lighter;
     outline: none;
     text-indent: 15px;
     height: 2.4rem;
